--- a/templates/base.html
+++ b/templates/base.html
@@ -7,7 +7,20 @@
     <title>base.html</title>
 </head>
 <body>
-    <h1>I am base.html</h1>
+    <header>
+        <div class="container">
+            <div class="row">
+                <div class="col">
+                    <h1>I am base.html</h1>
+                </div>
+                <div class="col">
+                    <ul>
+                        <li>Hello I am link #1</li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </header>
     {% block content%}
     <!-- Content goes here -->
     {% endblock%}
