--- a/templates/base.html
+++ b/templates/base.html
@@ -29,5 +29,20 @@
     {% block content%}
     <!-- Content goes here -->
     {% endblock%}
+    <footer>
+        <div class="container">
+            <div class="row">
+                <div class="col">
+                    <!-- Copyright -->
+                    <div>
+                        © 2021 Copyright:
+                        <a href="#">Code Institute Milestone Project 4</a>
+                    </div>
+                    <!-- Copyright -->
+                </div>
+            </div>
+            
+        </div>
+      </footer>
 </body>
 </html>
