Setup dropdown for the booking information on the booking.html

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -34,3 +34,11 @@ li a {
     cursor: pointer;
     color: white;
 }
+
+.book_information {
+    display: none;
+}
+
+.info_display {
+    display: flex;
+}
