--- a/static/css/base.css
+++ b/static/css/base.css
@@ -3,17 +3,26 @@
     padding: 0;
 }
 
+
+/* Styles for base.html */
+/* Header area */
 body {
-    background-color: lightblue;
+    background-color: lightskyblue;
+}
+
+.container-fluid {
+    justify-content: center;
 }
 
 .head_row {
     background-color: #323232;
     color: white;
+    text-align: center;
 }
 
-.navbar{
+.nav_bar ul li{
     display: inline;
+    margin: 25px 10px 0 10px;
 }
 
 li {
@@ -23,6 +32,21 @@ li {
 li a {
     color: white;
     text-decoration: none;
+}
+
+section.container {
+    min-height: 100vh;
+    min-width: 100vw;
+    height: 100%;
+    padding: 0;
+    margin: 0;
+}
+
+/* Footer area */
+footer {
+    background-color: #323232;
+    color: white;
+    height: 50px;
 }
 
 /* Styles for booking.html */
