Debug failed connection

--- a/templates/base.html
+++ b/templates/base.html
@@ -23,7 +23,7 @@
                     <!-- Beginning of navigation bar -->
                     <ul>
                         <li>
-                            <a href="#">Book Now</a>
+                            <a href="{% url 'booking' %}">Book Now</a>
                         </li>
                         <li>
                             <a href="{% url 'booking' %}">My Bookings</a>
