--- a/booknow/templates/booknow/booknow.html
+++ b/booknow/templates/booknow/booknow.html
@@ -2,4 +2,63 @@
 
 {% block content %}
     <h2>Hello I am book now</h2>
+    <div class="container">
+        <div class="row">
+            <div class="col">
+                <form method= "POST" action="book">
+                    <div>
+                        <p>
+                            <label for="menu">Choose your Menu:</label>
+                            <input list="menus" name="menu" id="menu_type">
+                            <datalist id="menus">
+                                <option value="Lunch">
+                                <option value="Dinner">
+                            </datalist>
+                        </p>
+                    </div>
+                    <div>
+                        <p>
+                            <label for="date">Date:</label>
+                            <input type="date" name="date" id="date_item">
+                        </p>
+                    </div>
+                    <div>
+                        <p>
+                            <label for="time">Time:</label>
+                            <input type="time" name="time" id="time">
+                        </p>
+                    </div>
+                    <div>
+                        <p>
+                            <label for="guest_num">Guests number:</label>
+                            <input list="guests" name="guest_num" id="guests_number">
+                            <datalist id="guests">
+                                <option value="1">
+                                <option value="2">
+                                <option value="3">
+                                <option value="4">
+                            </datalist>
+                        </p>
+                    </div>
+                    <div>
+                        <p>
+                            <label for="table_num">Select your table:</label>
+                            <input list="t_numbers" name="table_num" id="tables">
+                            <datalist id="t_numbers">
+                                <option value="1">
+                                <option value="2">
+                                <option value="3">
+                                <option value="4">
+                                <option value="5">
+                                <option value="6">
+                                <option value="7">
+                                <option value="8">
+                                <option value="9">
+                            </datalist>
+                        </p>
+                    </div>
+                </form>
+            </div>
+        </div>
+    </div>
 {% endblock %}
