--- a/booknow/templates/booknow/booknow.html
+++ b/booknow/templates/booknow/booknow.html
@@ -5,7 +5,8 @@
     <div class="container">
         <div class="row">
             <div class="col">
-                <form method= "POST" action="book">
+                <form method= "POST" action="{% url 'booking' %}">
+                    {% csrf_token %}
                     <div>
                         <p>
                             <label for="menu">Choose your Menu:</label>
@@ -56,6 +57,9 @@
                                 <option value="9">
                             </datalist>
                         </p>
+                    </div>
+                    <div>
+                        <button type = "submit"> Book now</button>
                     </div>
                 </form>
             </div>
