Setup signup and login form in in the same page

--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -1,5 +1,10 @@
 {% extends "base.html" %}
 
 {% block content %}
-    <h2>Hello I am index</h2>
+    <div>
+        {{ login_form }}
+    </div>
+    <div>
+        {{ signup_form }}
+    </div>
 {% endblock %}
