--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -1,25 +1,32 @@
 {% extends "base.html" %}
 
 {% block content %}
-    <div>
-        <form class="login" method="POST" action="{% url 'account_login' %}">
-            {% csrf_token %}
-            {{ login_form.as_p }}
-            {% if redirect_field_value %}
-            <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}" />
-            {% endif %}
-            <button class="primaryAction" type="submit">Login</button>
-        </form>
+<div class="container">
+    <div class="row">
+        <div class="col">
+            <div>
+                <form class="login" method="POST" action="{% url 'account_login' %}">
+                    {% csrf_token %}
+                    {{ login_form.as_p }}
+                    {% if redirect_field_value %}
+                    <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}" />
+                    {% endif %}
+                    <button class="primaryAction" type="submit">Login</button>
+                </form>
+            </div>
+        </div>
+        <div class="col">
+            <div>
+                <form class="signup" id="signup_form" method="post" action="{% url 'account_signup' %}">
+                    {% csrf_token %}
+                    {{ signup_form.as_p}}
+                    {% if redirect_field_value %}
+                    <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}" />
+                    {% endif %}
+                    <button type= "submit">Sign up </button>
+                </form>
+            </div>
+        </div>
     </div>
-    <div>
-        <form class="signup" id="signup_form" method="post" action="{% url 'account_signup' %}">
-            {% csrf_token %}
-            {{ signup_form.as_p}}
-            {% if redirect_field_value %}
-            <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}" />
-            {% endif %}
-            <button type= "submit">Sign up </button>
-          </form>
-        
-    </div>
+</div>
 {% endblock %}
