--- a/templates/base.html
+++ b/templates/base.html
@@ -34,6 +34,11 @@
                         <li>
                             <a href="{% url 'info' %}">Contact Us</a>
                         </li>
+                        {% if request.user.is_authenticated %}
+                            <li>
+                                <a href="{% url 'account_logout' %}" >Logout</a>
+                            </li>
+                        {% endif %}
                     </ul>
                     <!-- End of navigation bar -->
                 </div>
