Setup the time input for html and django on test forms

--- a/booking/templates/booking/booking.html
+++ b/booking/templates/booking/booking.html
@@ -27,7 +27,7 @@
           {% for test in tests %}
             <div class="row">
               <div class="col">
-                <h2 class="title">{{ test.title }}, {{ test.date }}, {{ test.time }} </h2>
+                <h2 class="title">{{ test.title }}, {{ test.date }}, {{ test.time }},  </h2>
               </div>
               <hr>
             </div>
