--- a/static/css/base.css
+++ b/static/css/base.css
@@ -84,6 +84,7 @@ footer {
 #singup_container {
     background-color: lightpink;
     width: 80%;
+    display: none;
 }
 
 .tab {
@@ -98,13 +99,12 @@ footer {
     background-color: royalblue;
 }
 
-.tab button:hover {
-    background-color: #ddd;
+.tab button.active:hover {
+    background-color: royalblue;
 }
 
-/* Create an active/current tablink class */
-.tab button.active {
-    background-color: #ccc;
+.tab button:hover {
+    background-color: #ddd;
 }
 
 /* Style the buttons that are used to open the tab content */
@@ -121,7 +121,6 @@ footer {
 
 /* Style the tab content */
 .tabcontent {
-    display: none;
     padding: 6px 12px;
     border: 1px solid #ccc;
     border-top: none;
@@ -131,7 +130,7 @@ footer {
     animation: fadeEffect 1s; /* Fading effect takes 1 second */
 }
   
-  /* Go from zero to full opacity */
+/* Go from zero to full opacity */
 @keyframes fadeEffect {
     from {opacity: 0;}
     to {opacity: 1;}
