Setup js function to toggle the signup and login tabs

--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -5,8 +5,8 @@
     <div class="row">
         <div class="col">
             <div class="tab">
-                <button class="tablinks active" onclick="activeTab('login')">Login</button>
-                <button class="tablinks" >Sign Up</button>              
+                <button class="tablinks active" id="login_tablink" onclick="activeTab('login')">Login</button>
+                <button class="tablinks" id="signup_tablink" onclick="activeTab('signup')">Sign Up</button>              
             </div>
             <div id="login_container" class="tabcontent">
                 <h3>Login</h3>
