--- a/templates/base.html
+++ b/templates/base.html
@@ -17,7 +17,7 @@
             <div class="row head_row">
                 <!-- here goes the logo -->
                 <div class="col">
-                    <a href="{% url 'index' %}"><h1>The Greenwich</h1></a>
+                    <a href="{% url 'index' %}" id="logo"><h1>The Greenwich</h1></a>
                 </div>
                 <div class="col nav_bar">
                     <!-- Beginning of navigation bar -->
