--- a/menu/templates/menu/menu.html
+++ b/menu/templates/menu/menu.html
@@ -1,8 +1,7 @@
 {% extends "base.html" %}
 
 {% block content %}
-    <h2>Hello I am menu</h2>
-    <div class="container">
+    <div class="container menu_container">
         <div class="row page_description">
             <div class="col">
                 <h1>The greenwich menu</h1>
