Set todayDate js function disables past dates in form field

--- a/booking/templates/booking/booking.html
+++ b/booking/templates/booking/booking.html
@@ -42,7 +42,7 @@
         </div>
         <div>
           <label for="date">Date:</label>
-          <input type="date" name="date" id="date_item" value="{{TestForms.date|date:'Y-m-d'}}">
+          <input type="date" name="date" id="date_item" onclick="todayDate()" value="{{TestForms.date|date:'Y-m-d'}}">
         </div>
         <div>
           <label for="time">Time:</label>
