--- a/booknow/templates/booknow/booknow.html
+++ b/booknow/templates/booknow/booknow.html
@@ -5,9 +5,10 @@
     <div class="container">
         <div class="row">
             <div class="col">
-                <form method= "POST" action="{% url 'booking' %}">
+                <form method= "POST">
                     {% csrf_token %}
                     {{ form }}
+                    <button type="submit">Submit</button>
                 </form>
             </div>
         </div>
