--- a/booknow/templates/booknow/booknow.html
+++ b/booknow/templates/booknow/booknow.html
@@ -1,5 +1,7 @@
 {% extends "base.html" %}
 
+{% load crispy_forms_tags %}
+
 {% block content %}
     <h2>Hello I am book now</h2>
     <div class="container">
@@ -7,7 +9,7 @@
             <div class="col">
                 <form method= "POST">
                     {% csrf_token %}
-                    {{ form }}
+                    {{ form|crispy }}
                     <button type="submit">Submit</button>
                 </form>
             </div>
