--- a/templates/base.html
+++ b/templates/base.html
@@ -47,7 +47,7 @@
             </div>
         </div>
     </header>
-    <section class="container">
+    <section class="container base">
         {% block content%}
         <!-- Content goes here -->
         {% endblock%}
