Restyle base.html and index.html styling issues appeared-possible sollution: different styles for index.html from the rest of the project

--- a/templates/base.html
+++ b/templates/base.html
@@ -47,7 +47,7 @@
             </div>
         </div>
     </header>
-    <section class="container base">
+    <section id="base_container">
         {% block content%}
         <!-- Content goes here -->
         {% endblock%}
