--- a/booking/templates/booking/booking.html
+++ b/booking/templates/booking/booking.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 
 {% block content %}
-    <div class="container">
+    <!-- <div class="container">
         <div class="row description">
           <h1>I am the profile page change me folder</h1>
           <p>In this page {{ user.username}} as authenticated user can see and interact with your bookings</p>
@@ -14,7 +14,6 @@
                   <p>Booked for: {{ booking.booked_time}}</p>
                   <p>Booked at: {{ booking.booked_date}}</p>
                   <p>Booked on: {{ booking.created_on}}</p>
-                  <!-- <p>Updated on: {{ booking.updated_on}}</p> -->
                   <p>Guests: {{ booking.guests_num}}</p>
                   <p>In case of food allergies or any other information that you would like to be aware please 
                       do not hesitate to contact us</p>
@@ -31,5 +30,5 @@
               <hr>
             </div>
           {% endfor %}
-      </div>
+      </div> -->
 {% endblock %}
