--- a/static/css/base.css
+++ b/static/css/base.css
@@ -6,25 +6,20 @@
     padding: 0;
 }
 
+html, body { height:100%; padding:0; margin:0; }
 
 /* Styles for base.html */
 /* Header area */
 body {
-    background-color: lightskyblue;
-}
-
-header {
-    margin-bottom: 35px;
+    background-color: #323232;
+    min-width: 100vw;
+    overflow-x: hidden;
 }
 
 #logo {
     font-family: 'Oooh Baby', cursive;
     color: white;
     text-decoration: none;
-}
-
-.base {
-    background-image: url("https://res.cloudinary.com/dmgrh8ekr/image/upload/v1641504065/greenwich/main_qnignh.jpg");
 }
 
 .container-fluid {
@@ -54,12 +49,9 @@ li a {
     text-decoration: none;
 }
 
-section.container {
-    min-height: 100vh;
-    min-width: 100vw;
+#base_container{
+    width: 100%;
     height: 100%;
-    padding: 0;
-    margin: 0;
 }
 
 /* Footer area */
@@ -67,33 +59,22 @@ footer {
     background-color: #323232;
     color: white;
     height: 50px;
+    text-align: center;
 }
 /* end of styles for base.html */
 
-/* Styles for booking.html */
-.title {
-    text-decoration: underline;
+/* Styles for index.html */
+#index_wrapper {
+    width: 100%;
+    height: 100%;
+    background: url("https://res.cloudinary.com/dmgrh8ekr/image/upload/v1641584745/greenwich/main2_iioljt.jpg") no-repeat center center;
+    margin: 0;
 }
 
-.title:hover {
-    cursor: pointer;
-    color: white;
-}
-
-.book_information {
-    display: none;
-}
-
-.info_display {
-    display: flex;
-}
-/* end of styles for booking.html */
-
-/* Styles for index */
-.index_wrapper {
-    background-color: rgb(59, 177, 48);
-    margin-top: 25px;
-    position: relative;
+#tab_content{
+    /* min-height: 100vh; */
+    background-color: #323232;
+    align-items: center;
 }
 
 /* login styles */
@@ -150,7 +131,7 @@ footer {
 
 .tabcontent {
     animation: fadeEffect 1s; /* Fading effect takes 1 second */
-}
+} 
   
 /* Go from zero to full opacity */
 @keyframes fadeEffect {
@@ -159,12 +140,30 @@ footer {
 }
 /* end of styles for index.html */
 
+/* Styles for booking.html */
+.title {
+    text-decoration: underline;
+}
+
+.title:hover {
+    cursor: pointer;
+    color: white;
+}
+
+.book_information {
+    display: none;
+}
+
+.info_display {
+    display: flex;
+}
+/* end of styles for booking.html */
 
 /* Styles for menu page */
 /* Styles for main container */
 .menu_container {
     text-align: center;
-    background-color: rgba(265, 265, 265, 0.6);
+    background-color: rgba(265, 265, 265, 0.9);
 }
 
 .dish_type_title {
