Set up authentication and authorisation control into pages where user needs to be authenticated

--- a/booknow/templates/booknow/booknow.html
+++ b/booknow/templates/booknow/booknow.html
@@ -3,16 +3,27 @@
 {% load crispy_forms_tags %}
 
 {% block content %}
-    <h2>Hello I am book now</h2>
-    <div class="container">
-        <div class="row">
-            <div class="col">
-                <form method= "POST">
-                    {% csrf_token %}
-                    {{ form|crispy }}
-                    <button type="submit">Submit</button>
-                </form>
+    {% if request.user.is_authenticated %}
+        <h2>Hello I am book now</h2>
+        <div class="container">
+            <div class="row">
+                <div class="col">
+                    <form method= "POST">
+                        {% csrf_token %}
+                        {{ form|crispy }}
+                        <button type="submit">Submit</button>
+                    </form>
+                </div>
             </div>
         </div>
-    </div>
+    {% else %}
+        <div class="container">
+            <div class="row">
+                <div class="col">
+                    <h1>You need to be logged in to see the content of this page.</h1>
+                    <p>Login or sign up <a href="{% url 'index' %}">here!</a></p>
+                </div>
+            </div>
+        </div>
+    {% endif %}
 {% endblock %}
