--- a/booking/templates/booking/booking.html
+++ b/booking/templates/booking/booking.html
@@ -1,10 +1,13 @@
 {% extends "base.html" %}
 
 {% block content %}
-    <!-- <div class="container">
+    <div class="container">
+      {% if request.user.is_authenticated %}
         <div class="row description">
-          <h1>I am the profile page change me folder</h1>
-          <p>In this page {{ user.username}} as authenticated user can see and interact with your bookings</p>
+          <div class="col">
+            <h1>I am the profile page change me folder</h1>
+            <p>In this page {{ user.username}} as authenticated user can see and interact with your bookings</p>
+          </div>
         </div>
           {% for booking in bookings%}
             <div class="row">
@@ -30,5 +33,13 @@
               <hr>
             </div>
           {% endfor %}
-      </div> -->
+      {% else %}
+            <div class="row">
+              <div class="col">
+                <h1>You need to be logged in to see the content of this page.</h1>
+                <p>Login or sign up <a href="{% url 'index' %}">here!</a></p>
+              </div>
+            </div>
+      {% endif %}
+      </div>
 {% endblock %}
