--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -2,7 +2,7 @@
 
 {% block content %}
 <div class="row" id="index_wrapper">
-    <!-- <div class="row">
+    <div class="row">
         <div class="col-3" id="tab_content">
             <div class="tab">
                 <button class="tablinks active" id="login_tablink" onclick="activeTab('login')">Login</button>
@@ -31,6 +31,6 @@
                 </form>
             </div>
         </div>
-    </div> -->
+    </div>
 </div>
 {% endblock %}
