--- a/templates/base.html
+++ b/templates/base.html
@@ -22,13 +22,24 @@
                 <div class="col nav_bar">
                     <!-- Beginning of navigation bar -->
                     <ul>
+                        {% if not request.user.is_authenticated %}
+                            <li>
+                                <a href="#">Make a booking</a>               
+                            </li>
+                        {% endif %}  
                         {% if request.user.is_authenticated %}
                             <li>
                                 <a href="{% url 'booknow' %}">Book Now</a>
                             </li>
-                            <li>
-                                <a href="{% url 'booking' %}">My Bookings</a>
-                            </li>
+                            {% if  user.username != "admin" %}}
+                                <li>
+                                    <a href="{% url 'booking' %}">My Bookings</a>
+                                </li>
+                            {% else %}
+                                <li>
+                                    <a href="{% url 'booking' %}">All Bookings</a>
+                                </li>
+                            {% endif %}
                         {% endif %}
                         <li>
                             <a href="{% url 'menu' %}">Menu</a>                            
