--- a/templates/base.html
+++ b/templates/base.html
@@ -24,7 +24,7 @@
                     <ul>
                         {% if not request.user.is_authenticated %}
                             <li>
-                                <a href="#">Make a booking</a>               
+                                <a href="{% url 'booknow' %}">Make a booking</a>               
                             </li>
                         {% endif %}  
                         {% if request.user.is_authenticated %}
