Setup edit and delete link buttons

--- a/menu/templates/menu/menu.html
+++ b/menu/templates/menu/menu.html
@@ -32,7 +32,7 @@
                 {% for starter in starters %}
                     <div class="row">
                         <div class="col">
-                            <h3 class="dish_title"> {{ starter.title}} </h3>
+                            <h3 class="dish_title"> {{ starter.title}} <a href="#">Edit</a>/<a href="#">Delete</a></h3>
                             <div class="dish_info">
                                 <p> {{ starter.components }}</p>
                                 <p>{{ starter.price}} €</p>
