--- a/menu/templates/menu/menu.html
+++ b/menu/templates/menu/menu.html
@@ -32,7 +32,7 @@
                 {% for starter in starters %}
                     <div class="row">
                         <div class="col">
-                            <h3 class="dish_title"> {{ starter.title}} <a href="#">Edit</a>/<a href="#">Delete</a></h3>
+                            <h3 class="dish_title"> {{ starter.title}} <a href="{% url 'add_edit' %}/{{ item.id }}"><button>Edit</button></a><a href="#"><button>Delete</button></a></h3>
                             <div class="dish_info">
                                 <p> {{ starter.components }}</p>
                                 <p>{{ starter.price}} €</p>
@@ -54,7 +54,7 @@
                 {% for main in mains %}
                     <div class="row">
                         <div class="col">
-                            <h3 class="dish_title"> {{ main.title}} </h3>
+                            <h3 class="dish_title"> {{ main.title}} <a href="#"><button>Edit</button></a><a href="#"><button>Delete</button></a></h3>
                             <div class="dish_info">
                                 <p> {{ main.components }}</p>
                                 <p>{{ main.price}} €</p>
@@ -76,7 +76,7 @@
                 {% for desert in deserts %}
                     <div class="row">
                         <div class="col">
-                            <h3 class="dish_title"> {{ desert.title}} </h3>
+                            <h3 class="dish_title"> {{ desert.title}} <a href="#"><button>Edit</button></a><a href="#"><button>Delete</button></a></h3>
                             <div class="dish_info">
                                 <p> {{ desert.components }}</p>
                                 <p>{{ desert.price}} €</p>
