--- a/menu/templates/menu/add_item.html
+++ b/menu/templates/menu/add_item.html
@@ -8,11 +8,11 @@
     <div class="container">
         <div class="row">
             <div class="col">
-                <h1>Here is the add + edit page</h1>
+                <h1>Hello add new menu item here</h1>
                 <form method= "POST">
                     {% csrf_token %}
                     {{ form|crispy }}
-                    <button type="submit">Submit</button>
+                    <button type="submit">Add Item</button>
                 </form>
             </div>
         </div>
