--- a/menu/templates/menu/menu.html
+++ b/menu/templates/menu/menu.html
@@ -17,7 +17,7 @@
                 </p>
             </div>
             {% if  user.username == "admin" %}}
-                <a href="{% url 'add_edit' %}">Add item</a>
+                <a href="{% url 'add' %}">Add item</a>
             {% endif %}
         </div>
         <!-- Rendered DB content based on the starter category -->
@@ -32,7 +32,7 @@
                 {% for starter in starters %}
                     <div class="row">
                         <div class="col">
-                            <h3 class="dish_title"> {{ starter.title}} <a href="{% url 'add_edit' %}/{{ item.id }}"><button>Edit</button></a><a href="#"><button>Delete</button></a></h3>
+                            <h3 class="dish_title"> {{ starter.title}} <a href="{% url 'edit' starter.id %}"><button>Edit</button></a><a href="{% url 'delete' starter.id %}"><button>Delete</button></a></h3>
                             <div class="dish_info">
                                 <p> {{ starter.components }}</p>
                                 <p>{{ starter.price}} €</p>
@@ -54,7 +54,7 @@
                 {% for main in mains %}
                     <div class="row">
                         <div class="col">
-                            <h3 class="dish_title"> {{ main.title}} <a href="#"><button>Edit</button></a><a href="#"><button>Delete</button></a></h3>
+                            <h3 class="dish_title"> {{ main.title}} <a href="{% url 'edit' main.id %}"><button>Edit</button></a><a href="{% url 'delete' main.id %}"><button>Delete</button></a></h3>
                             <div class="dish_info">
                                 <p> {{ main.components }}</p>
                                 <p>{{ main.price}} €</p>
@@ -76,7 +76,7 @@
                 {% for desert in deserts %}
                     <div class="row">
                         <div class="col">
-                            <h3 class="dish_title"> {{ desert.title}} <a href="#"><button>Edit</button></a><a href="#"><button>Delete</button></a></h3>
+                            <h3 class="dish_title"> {{ desert.title}} <a href="{% url 'edit' desert.id %}"><button>Edit</button></a><a href="{% url 'delete' desert.id %}"><button>Delete</button></a></h3>
                             <div class="dish_info">
                                 <p> {{ desert.components }}</p>
                                 <p>{{ desert.price}} €</p>
